--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "keluarberapa-react",
   "version": "0.1.0",
-  "private": true,
-  "homepage": "https://abdurrahmanjaisy.github.io/keluarBerapa",
+  "private": false,
+  "homepage": "https://abdurrahmanjaisy.github.io/keluarrBerapa",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
